css/syle.css
/* RESET  */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Samples */
.h80 {
    height: 80px;
}

.h200 {
    height: 200px;
}

.h500 {
    height: 500px;
}

/* * {
    border: 1px solid red;
} */



/* COMMON  */
body {
    font-family: 'Open Sans',sans-serif;
}

/* Texts  */
.xs-txt {
    font-size: 14px;
}

.small-txt {

}

.medium-txt {
    font-size: 30px;
}

.title {
    font-size: 45px;
}

/* Containers  */
.container-wide {
    width: 80%;
    margin: auto;
}

.container-narrow {
    width: 70%;
    margin: auto;
}

.container-half {
    width: 35%;
    margin-left: 15%;
    margin-right: 50%;
}
/* Layout Structure  */
.clearfix::after {
    display: table;
    content: "";
    clear: both;
}

.col {
    float: left;
}

/* Img Reset  */
img {
    width: 100%;
}

/* Ul Bullet List Reset */
ul {
    list-style-type: none;
}

/* Link Reset  */
a {
    text-decoration: none;
}

/* Buttons */

.btn-large {
    padding: 5px 30px;
}

.btn-small {
    padding: 5px 15px;
}

.btn-white {
   color: black;
   background-color: white;
   border: 1px solid black;
} 

.btn-blue {
    background-color: #0061ff;
    color: white;
}



/* HEADER  */
header {
    padding: 0px 30px;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 80px;
    background-color: white;
    z-index: 3;
}

header .clearfix .col {
    width: 50%;
    line-height: 80px;
}

/* Nav menu  */
header .clearfix .col ul li {
    display: inline-block;
}

header a {
    margin-left: 40px;
    color: black;
}

.col-header-r {
    text-align: right;
}

/* Logo  */
header .logo-dropbox {
    vertical-align: middle;
}



/* MAIN  */
main {
    margin-top: 80px;
}
/* JUMBOTRONE  */
.jumbotrone {
    background-color: #b4d0e7;
    padding: 100px 0px;
}

.jumbotrone h1 {
    font-size: 80px;
    margin-bottom: 50px;
}

/* Columns  */
.col-jumbo-l {
    width: 30%;
}

.col-jumbo-r {
    width: 70%;
    position: relative;
}

/* Left Column  */
.jumbotrone p.medium-txt {
    margin-bottom: 30px;
}

.col-jumbo-l a {
    display: inline-block;
    margin-bottom: 20px;
}

.jumbotrone p.small-txt {
    margin-bottom: 40px;
}

.download-icon {
    font-size: 45px;
}

/* Right Column  */
.jumbotrone img {
    position: absolute;
}



/* BUSINNESS PLAN  */
.plan {
    padding-top: 300px;
}

.plan h2 {
    margin-bottom: 40px;
}

/* Invoicing  */
.invoicing {
    line-height: 50px;
    margin-bottom: 30px;
}

.checkbox {
    border-radius: 50%;
    display: inline-block;
    background-color: white;
    vertical-align: middle;
}

.checked {
    height: 20px;
    width: 20px;
    border: 5px solid #0061ff;   
}

.unchecked {
    height: 20px;
    width: 20px;
    border: 1px solid gray;
}

.invoicing span {
    margin-right: 20px;
}

/* Plans  */
.col-plan {
    width: 30%;
}

.user-type {
    text-align: center;
    font-size: 20px;
    padding: 10px 0px;
}

/* Borders  */
.user-type, .features, .info {
    border: 1px solid #d0d0d3; 
}

/* Columns spacing  */
.standard {
    margin-right: 5%;
    margin-left: 5%;
}

/* Features  */
.features {
    padding-top: 30px;
    padding-left: 25px;
    padding-right: 25px;  
    height: 900px;
}

/* Text with icon aligned, txt cannot go under icon  */
.txt-icon {
    padding-left: 20px;
}

.txt-icon i {
    margin-left: -20px;
}

/* Margins  */
.features h3 {
    margin-bottom: 20px;
}

.features .price {
    margin-bottom: 15px;
}

.features .fee {
    color: gray;
}

.features .fee, .features .productivity {
    margin-bottom: 50px;
}

.features .max-users, .features .max-storage {
    margin-bottom: 20px;
}

.features .btn-large {
    display: inline-block;
}

.features .free-trial a {
    margin-bottom: 25px;
}

.features .free-trial p a {
    color: #0061ff;
    text-decoration: underline;
}


/* Line  */
.features .free-trial::after {
    content: "";
    display: block;
    width: 50px;
    height: 1px;
    background-color: gray;
    margin-top: 25px;
    margin-bottom: 45px;
}
/* End Line  */


.features .keypoints-title {
    margin-bottom: 20px;
}

.features .keypoints-checkbox {
    margin-bottom: 20px;
}

.features .keypoints-checkbox .keypoints-checkbox-icon {
    color: #0061ff;
}

/* Enterprise  */
.enterprise {
    margin-top: 60px;
    margin-bottom: 100px;
}

.info {
    padding-top: 30px;
    padding-left: 25px;
    padding-right: 25px; 
    padding-bottom: 25px;
}

.col-enterprise-l {
    width: 70%;
}

.col-enterprise-r {
    width: 30%;
    padding-top: 5px;
    text-align: right;
}

.col-enterprise-r a {
    display: inline-block;
    vertical-align: middle;
    padding-right: 70px;
    padding-left: 70px;
}

.col-enterprise-l h3 {
    margin-bottom: 15px;
}

.col-enterprise-l h4 {
    margin-bottom: 30px;
}

/* Partner  */
.partner { 
    padding: 100px 0px;
}

.col-partner-l, .col-partner-r {
    width: 50%;
}

.col-partner-r {
    padding-top: 50px;
    padding-left: 50px;
    padding-bottom: 50px;
}

.col-partner-r h3 {
    margin-bottom: 30px;
}

.col-partner-r p {
    margin-bottom: 25px;
}

.col-partner-r a {
    display: inline-block;
}



/* FUNCITONALITIES  */
.function h2 {
    margin-bottom: 60px;
}

.col-function {
    width: 30%;
}

.col-function.middle {
    margin-left: 5%;
    margin-right: 5%;
}

.col-function img {
    margin-bottom: 10px;
}

.col-function h3 {
    margin-bottom: 30px;
}

.col-function p a {
    color: black;
    text-decoration: underline;
}

.function .row {
    margin-bottom: 200px;
} 



/* LIVE COMPANY USERS */
.company-users .container-half h2 {
    margin-bottom: 30px;
}

.company-users .container-half a {
    text-decoration: underline;
    color: #0061ff;
}

.company-users .container-half {
    margin-bottom: 40px;
}

/* Banner */
.col-banner-l, .col-banner-r {
    width: 500px;
    height: 500px;
}

.col-banner-c {
    width: calc( 100% - 1000px );
    height: 500px;
}

.company-banner .box {
    width: 250px;
    height: 250px;
}

.col.box {
    position: relative;
}

/* Company logos  */
.company-banner .col-banner-l img, .company-banner .col-banner-r img{
    width: 50%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    filter: invert(1);
}

.box-1 {
    background-color: #a2d39b;
    border: 10px solid #d0e9cd;
}

.box-2 {
    background-color: #61082b;
}

.box-3 {
    background-color: #0093ce;
}

.box-4 {
    background-color: #ff1c1c;
}

.box-5 {
    background-color: #d5001f;
}

.box-6 {
    background-color: #b4d0e7;
}

.box-7 {
    background-color: #0d2481;
}

.box-8 {
    background-color: #ffd830;
}

/* Central Banner Description  */
.col-banner-c {
    background-color: #f5f5f5;
    padding: 45px;
}

.col-banner-c img {
    width: 25%;
}

.col-banner-c .logo-company-desc::after {
    content: "";
    display: block;
    height: 1px;
    width: 40px;
    background-color: lightgray;
    margin-top: 30px;
    margin-bottom: 45px;
}

.col-banner-c p {
    margin-bottom: 30px;
}



/* CTA:"BRING DROPBOX INTO YOUR BUSINESS" */
.cta {
    padding-top: 100px;
    padding-bottom: 100px;
    background-color: #b4d0e7;
}

.col-cta-l, .col-cta-r {
    width: 50%;
}

.cta h2 {
    color: #61082b;
}

.col-cta-r {
    text-align: right;
    padding-top: 10px;
}

.col-cta-r a {
    border: none;
    display: inline-block;
    vertical-align: middle;
    padding-right: 70px;
    padding-left: 70px;
}



/* FAQ  */
.faq {
    padding: 100px 0px;
}

.faq h3 {
    margin-bottom: 40px;
}

.faq li {
    line-height: 80px;
    font-weight: bold;
}

/* Faq Line divider  */
.faq .faq-list :first-child li::before {
    content: "";
    display: block;
    width: 100%;
    height: 1px;
    background-color: lightgray;
}

.faq li::after {
    content: "";
    display: block;
    width: 100%;
    height: 1px;
    background-color: lightgray;
}

/* Faq Drop-down positioning  */
.faq-list .drop-down {
    position: relative;
    left: 45%;
}



/* FOOTER  */
footer {
    background-color: black;
    padding-top: 110px;
    padding-bottom: 30px;
    padding-left: 200px;
    padding-right: 400px;
}

footer .col-footer {
    width: 20%;
}

/* Nav Menu  */
.col-footer h3 {
    color: white;
    font-size: 30px;
    font-weight: bold;
    margin-bottom: 15px;
}

.col-footer li a {
    font-size: 15px;
    line-height: 25px;
    color: white;
}

/* Line  */
footer nav::after {
    content: "";
    display: block;
    width: 120px;
    height: 1px;
    background-color: lightgray;
    margin-top: 100px;
    margin-bottom: 30px;
}

/* Language  */
.language-settings span {
    color:lightgray;
    opacity: 0.5;
}

.language-settings .sort-up {
    vertical-align: sub;
}

